--- a/src/main/resources/org/proview/test/ProfileView.fxml
+++ b/src/main/resources/org/proview/test/ProfileView.fxml
@@ -29,7 +29,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </HBox>
-                  <HBox alignment="CENTER_LEFT" spacing="20.0">
+                  <HBox alignment="CENTER" spacing="20.0">
                      <children>
                         <VBox>
                            <children>
