--- a/src/main/resources/org/proview/test/ActivityCellView.fxml
+++ b/src/main/resources/org/proview/test/ActivityCellView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Button mnemonicParsing="false" onAction="#onMouseClick" styleClass="cell-form" stylesheets="@styles/ListView.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.ActivityCellView">
+<Button mnemonicParsing="false" onAction="#onMouseClick" styleClass="cell-form" stylesheets="@styles/ListView.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.ActivityCellView">
    <graphic>
       <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="300.0">
          <children>
@@ -40,14 +40,18 @@
                         <Insets left="10.0" />
                      </VBox.margin>
                   </Label>
-                  <Label fx:id="descriptionLabel" alignment="TOP_LEFT" prefHeight="20.0" prefWidth="312.0" text="This is good etc...&#10;" wrapText="true">
+                  <HBox fx:id="descriptionHBox">
                      <VBox.margin>
                         <Insets left="10.0" />
                      </VBox.margin>
-                     <font>
-                        <Font name="System Italic" size="12.0" />
-                     </font>
-                  </Label>
+                     <children>
+                        <Label fx:id="descriptionLabel" alignment="TOP_LEFT" prefHeight="20.0" prefWidth="312.0" text="This is good etc...&#10;" wrapText="true">
+                           <font>
+                              <Font name="System Italic" size="12.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
                </children>
                <HBox.margin>
                   <Insets />
