--- a/src/main/resources/org/proview/test/PersonalActivityCellView.fxml
+++ b/src/main/resources/org/proview/test/PersonalActivityCellView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Button mnemonicParsing="false" onAction="#onMouseClick" styleClass="cell-form" stylesheets="@styles/ListView.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.PersonalActivityCellView">
+<Button mnemonicParsing="false" onAction="#onMouseClick" styleClass="cell-form" stylesheets="@styles/ListView.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.PersonalActivityCellView">
    <graphic>
       <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="300.0">
          <children>
@@ -26,14 +26,18 @@
                         <Insets left="10.0" />
                      </VBox.margin>
                   </HBox>
-                  <Label fx:id="descriptionLabel" alignment="TOP_LEFT" prefHeight="34.0" prefWidth="293.0" text="This is good etc...&#10;abc" wrapText="true">
-                     <font>
-                        <Font name="System Italic" size="12.0" />
-                     </font>
+                  <HBox fx:id="descriptionHBox" prefHeight="30.0" prefWidth="243.0">
                      <VBox.margin>
                         <Insets left="10.0" />
                      </VBox.margin>
-                  </Label>
+                     <children>
+                        <Label fx:id="descriptionLabel" alignment="TOP_LEFT" prefHeight="34.0" prefWidth="293.0" text="This is good etc...&#10;abc" wrapText="true">
+                           <font>
+                              <Font name="System Italic" size="12.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
                   <Label fx:id="timeLabel" alignment="TOP_RIGHT" contentDisplay="TOP" prefHeight="17.0" prefWidth="376.0" text="3 hours ago" wrapText="true">
                      <font>
                         <Font name="System Italic" size="10.0" />
