--- a/src/main/resources/org/proview/test/styles/BookInfoView.css
+++ b/src/main/resources/org/proview/test/styles/BookInfoView.css
@@ -19,7 +19,7 @@
 #star-rating .ikonli-font-icon-rated {
     -fx-icon-size: 24;
     -fx-icon-code: "fas-star";
-    -fx-icon-color: gold;
+    -fx-icon-color: goldenrod;
 }
 
 #star-rating .ikonli-font-icon-hover {
