small changes to import/export view

--- a/src/main/resources/org/proview/test/EditProfileView.fxml
+++ b/src/main/resources/org/proview/test/EditProfileView.fxml
@@ -27,7 +27,7 @@
          <PasswordField fx:id="currentPasswordField" alignment="CENTER" promptText="Current Password" styleClass="input" />
          <PasswordField fx:id="newPasswordField" alignment="CENTER" promptText="New Password" styleClass="input" />
          <PasswordField fx:id="confirmPasswordField" alignment="CENTER" promptText="Confirm Password" styleClass="input" />
-         <Button fx:id="confirmButton" mnemonicParsing="false" onAction="#onConfirmButtonClick" prefHeight="45.0" prefWidth="398.0" text="Confirm" />
+         <Button fx:id="confirmButton" mnemonicParsing="false" onAction="#onConfirmButtonClick" prefHeight="45.0" prefWidth="398.0" styleClass="confirm-button" text="Confirm" />
          <Button fx:id="backButton" mnemonicParsing="false" onAction="#onBackButtonClick" prefHeight="35.0" prefWidth="409.0" styleClass="back-button" text="Back" />
       </children>
       <VBox.margin>
