--- a/src/main/resources/org/proview/test/styles/RegisterView.css
+++ b/src/main/resources/org/proview/test/styles/RegisterView.css
@@ -62,3 +62,12 @@
     -fx-text-fill: #007bff;
     -fx-underline: true;
 }
+
+.confirm-button {
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #ffffff;
+    -fx-background-color: -red;
+    -fx-background-radius: 10px;
+    -fx-padding: 7px 20px;
+}
