--- a/src/main/resources/org/proview/test/IssueListView.fxml
+++ b/src/main/resources/org/proview/test/IssueListView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="root" prefHeight="770.0" prefWidth="1412.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.IssueListView">
+<BorderPane fx:id="root" prefHeight="770.0" prefWidth="1412.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.IssueListView">
     <top>
         <fx:include source="NavBarView.fxml" />
     </top>
@@ -19,7 +19,7 @@
         <fx:include source="AdminManagementNavBarView.fxml" />
     </left>
    <center>
-      <VBox prefHeight="985.0" prefWidth="1303.0">
+      <VBox prefHeight="985.0" prefWidth="1303.0" stylesheets="@styles/styles.css">
          <children>
             <HBox alignment="CENTER" prefHeight="126.0" spacing="20.0">
                <children>
