--- a/src/main/resources/org/proview/test/UserManagementForAdminView.fxml
+++ b/src/main/resources/org/proview/test/UserManagementForAdminView.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="691.0" prefWidth="1233.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.UserManagementForAdminView">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="691.0" prefWidth="1233.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.UserManagementForAdminView">
     <top>
         <fx:include source="NavBarView.fxml" />
     </top>
@@ -18,7 +18,7 @@
         <fx:include source="AdminManagementNavBarView.fxml" />
     </left>
     <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="200.0" prefWidth="100.0" stylesheets="@styles/styles.css" BorderPane.alignment="CENTER">
          <children>
             <HBox alignment="CENTER" prefHeight="126.0" prefWidth="1126.0" spacing="20.0">
                <children>
