--- a/src/main/resources/org/proview/test/styles/styles.css
+++ b/src/main/resources/org/proview/test/styles/styles.css
@@ -20,3 +20,45 @@
     -blue: #457B9D;
     -dark-blue: #1D3557;
 }
+
+.table-view {
+    -fx-background-color: #f4f4f4;
+    -fx-border-color: #cccccc;
+    -fx-border-width: 1px;
+    -fx-border-radius: 5px;
+}
+
+.column-header {
+    -fx-background-color: -light-blue;
+    -fx-text-fill: white;
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+}
+
+.table-row-cell {
+    -fx-background-color: #ffffff;
+    -fx-border-color: #e0e0e0;
+    -fx-border-width: 0 0 1px 0;
+}
+
+.table-row-cell:odd {
+    -fx-background-color: #f9f9f9;
+}
+
+.table-cell {
+    -fx-padding: 8px;
+    -fx-font-size: 12px;
+    -fx-text-fill: #333333;
+}
+
+.table-row-cell:selected {
+    -fx-background-color: #d1e7dd;
+    -fx-text-fill: #000000;
+}
+
+.table-row-cell:filled:selected {
+    -fx-background: #d1e7dd;
+    -fx-background-color: -fx-table-cell-border-color, -fx-background ;
+    -fx-background-insets: 0, 0 0 1 0 ;
+    -fx-table-cell-border-color: derive(-fx-color, 5%);
+}
