--- a/src/main/resources/org/proview/test/styles/BookInfoView.css
+++ b/src/main/resources/org/proview/test/styles/BookInfoView.css
@@ -110,7 +110,7 @@
 .back-button {
     -fx-font-size: 12px;
     -fx-text-fill: white;
-    -fx-background-color: #d46b2ag;
+    -fx-background-color: #d46b2a;
     -fx-background-radius: 10px;
     -fx-cursor: hand;
 }
